--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,21 @@ pyasn1
 PyMySQL
 rsa
 Werkzeug
+blinker==1.8.2
+cachelib==0.13.0
+click==8.1.7
+Flask==3.0.3
+Flask-Cors==5.0.0
+Flask-Session==0.8.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==3.0.2
+msgspec==0.18.6
+path==17.0.0
+pathlib==1.0.1
+pyaes==1.6.1
+pyasn1==0.6.1
+PyJWT==2.9.0
+PyMySQL==1.1.1
+rsa==4.9
+Werkzeug==3.0.6
